# NPuzzle

./: CMakeLists.txt  TODO.txt  build.sh  clean.sh
Sortedness/: main.cpp
Sources/: Dijkstra.cpp  Dijkstra.hpp  Matrix.cpp  Matrix.hpp  MatrixRepository.cpp  MatrixRepository.hpp  Move.cpp  Move.hpp  Parser.cpp  Parser.hpp  Point.hpp  ResultChecker.cpp  ResultChecker.hpp  Solver.cpp  Solver.hpp  SquareMatrix.cpp  SquareMatrix.hpp  State.cpp  State.hpp  StateContainer.cpp  StateContainer.hpp  Utils.hpp
Tests/: Dijkstra.cpp  Move.cpp  Parser.cpp  ResultChecker.cpp  Solver.cpp  StateContainer.cpp  TestUtils.hpp
